Fixed Overlay spacing

--- a/client/src/pages/ReactionTimePage.css
+++ b/client/src/pages/ReactionTimePage.css
@@ -88,7 +88,7 @@
 }
 
 .game-overlay p {
-  margin: 10px;
+  margin: 2px;
 }
 
 .stat-card-inline {
@@ -96,7 +96,7 @@
   border: 1px solid #555;
   border-radius: 8px;
   padding: 1rem 1.5rem;
-  margin-bottom: 2rem;
+  /* margin-bottom: 2rem; */
   width: 100%;
   max-width: 350px;
   box-sizing: border-box;
